some changes here and there

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Findex-frontend",
+  "name": "findex-frontend",
   "version": "0.0.1",
   "private": true,
   "description": "Findex frontend.",
