--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,12 @@
 #
 #    pip-compile requirements.in
 #
+alabaster==0.7.12
+    # via sphinx
 amqp==5.0.5
     # via kombu
+babel==2.9.0
+    # via sphinx
 backcall==0.2.0
     # via ipython
 billiard==3.6.3.0
@@ -15,9 +19,13 @@ brotlipy==0.7.0
 celery[redis]==5.0.5
     # via -r requirements.in
 certifi==2020.12.5
-    # via sentry-sdk
+    # via
+    #   requests
+    #   sentry-sdk
 cffi==1.14.5
     # via brotlipy
+chardet==4.0.0
+    # via requests
 click-didyoumean==0.0.3
     # via celery
 click-plugins==1.1.1
@@ -55,24 +63,36 @@ django==2.2.19
     #   django-js-reverse
     #   django-log-request-id
     #   django-model-utils
+docutils==0.16
+    # via sphinx
 et-xmlfile==1.0.1
     # via openpyxl
 gunicorn==20.1.0
     # via -r requirements.in
+idna==2.10
+    # via requests
+imagesize==1.2.0
+    # via sphinx
 ipython-genutils==0.2.0
     # via traitlets
 ipython==7.22.0
     # via -r requirements.in
 jedi==0.18.0
     # via ipython
+jinja2==2.11.3
+    # via sphinx
 kombu==5.0.2
     # via celery
 markuppy==1.14
     # via tablib
+markupsafe==1.1.1
+    # via jinja2
 odfpy==1.4.1
     # via tablib
 openpyxl==3.0.7
     # via tablib
+packaging==20.9
+    # via sphinx
 parso==0.8.1
     # via jedi
 pexpect==4.8.0
@@ -92,21 +112,44 @@ ptyprocess==0.7.0
 pycparser==2.20
     # via cffi
 pygments==2.8.1
-    # via ipython
+    # via
+    #   ipython
+    #   sphinx
+pyparsing==2.4.7
+    # via packaging
 python-decouple==3.4
     # via -r requirements.in
 pytz==2021.1
     # via
+    #   babel
     #   celery
     #   django
 pyyaml==5.4.1
     # via tablib
 redis==3.5.3
     # via celery
+requests==2.25.1
+    # via sphinx
 sentry-sdk==1.0.0
     # via -r requirements.in
 six==1.15.0
     # via click-repl
+snowballstemmer==2.1.0
+    # via sphinx
+sphinx==3.5.3
+    # via -r requirements.in
+sphinxcontrib-applehelp==1.0.2
+    # via sphinx
+sphinxcontrib-devhelp==1.0.2
+    # via sphinx
+sphinxcontrib-htmlhelp==1.0.3
+    # via sphinx
+sphinxcontrib-jsmath==1.0.1
+    # via sphinx
+sphinxcontrib-qthelp==1.0.3
+    # via sphinx
+sphinxcontrib-serializinghtml==1.1.4
+    # via sphinx
 sqlparse==0.4.1
     # via django
 tablib[html,ods,xls,xlsx,yaml]==3.0.0
@@ -114,7 +157,9 @@ tablib[html,ods,xls,xlsx,yaml]==3.0.0
 traitlets==5.0.5
     # via ipython
 urllib3==1.26.4
-    # via sentry-sdk
+    # via
+    #   requests
+    #   sentry-sdk
 vine==5.0.0
     # via
     #   amqp
