--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,18 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "emotion-theming": "^10.0.27",
+    "history": "^5.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router": "6.0.0-beta.0",
+    "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
