--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.7
 
-RUN pip install fastapi uvicorn
+COPY requirements.txt ./requirements.txt
+
+RUN pip3 install -r requirements.txt 
 
 EXPOSE 80
 
 COPY ./app /app
+
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
