--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,7 +6,7 @@ RUN pip3 install -r requirements.txt
 
 EXPOSE 80
 
-COPY ./app /app
+COPY ./ /app
 
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
